fixed the letter spacing and the font-weight

--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,7 @@ body {
 .title h1 {
   color: var(--primary);
   font-size: 1.2rem;
-  letter-spacing: 2px;
-  font-weight: normal;
+
 }
 .title h2,
 .title p {
